localization/v2.4.x/site/de/home/home.md
---
id: home.md
---
<div class="doc-h1-wrapper">
<p><h1 class="title">
Willkommen bei Milvus Docs!</h1></p>
<p><h2 class="sub-title">
Hier erfahren Sie, was Milvus ist und wie Sie Milvus installieren, verwenden und einsetzen, um eine Anwendung nach Ihren Bedürfnissen zu erstellen.</h2></p>
</div>
<div class="doc-home-promotion-wrapper">
  <div class="promotion-content">
    <h2 class="promotion-title">Testen Sie Managed Milvus kostenlos!</h2>
    <p class="promotion-desc">Testen Sie Zilliz Cloud kostenlos! Der einfachste Weg, Milvus zu erleben!</p>
  </div>
  <div class="cta-wrapper">
   <a class="cta-global" href="https://cloud.zilliz.com/signup">Zilliz Cloud</a> <a class="cta-cn" href="https://cloud.zilliz.com.cn/signup">Zilliz Cloud China</a></div>
</div>
<h2 id="Get-Started" class="common-anchor-header">Beginnen Sie<button data-href="#Get-Started" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="card-wrapper">
<div class="start_card_container">
  
   <a href="/docs/de/v2.4.x/install_standalone-docker.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_install.svg" alt="icon" />
   </a> <a href="/docs/de/v2.4.x/install_standalone-docker.md"> <p class="link-btn">Milvus installieren</p> </a><p>Erfahren Sie, wie Sie Milvus entweder mit Docker Compose oder auf Kubernetes installieren.</p>
</div>
<div class="start_card_container">
  
   <a href="/docs/de/v2.4.x/quickstart.md"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_quick_start.svg" alt="icon" />
   </a> <a href="/docs/de/v2.4.x/quickstart.md"> <p class="link-btn">Schnellstart</p> </a><p>Erfahren Sie, wie Sie Milvus anhand von Beispielcode schnell ausführen können.</p>
</div>
<div class="start_card_container">
  
   <a href="/bootcamp"> <img translate="no" src="https://milvus-docs.s3.us-west-2.amazonaws.com/assets/home_bootcamp.svg" alt="icon" />
   </a> <a href="/bootcamp"> <p class="link-btn">Bootcamp</p> </a><p>
  Lernen Sie, wie man mit Milvus Anwendungen für die Suche nach Vektorähnlichkeit erstellt.  </p>
</div>
</div>
<h2 id="Recommended-articles" class="common-anchor-header">Empfohlene Artikel<button data-href="#Recommended-articles" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><div class="doc-home-recommend-section">
<div class="recomment-item">
  <p>verwenden</p>
<ul>
<li><a href="/docs/de/v2.4.x/manage-collections.md">Verwalten von Sammlungen</a></li>
<li><a href="/docs/de/v2.4.x/insert-update-delete.md">Einfügen, Upsert und Löschen</a></li>
<li><a href="/docs/de/v2.4.x/index-vector-fields.md">Vektorfelder indizieren</a></li>
<li><a href="/docs/de/v2.4.x/single-vector-search.md">Ein-Vektor-Suche</a></li>
<li><a href="/docs/de/v2.4.x/get-and-scalar-query.md">Hole &amp; Skalare Abfrage</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Bereitstellen von</p>
<ul>
<li><a href="/docs/de/v2.4.x/configure-docker.md">Milvus konfigurieren</a></li>
<li><a href="/docs/de/v2.4.x/deploy_s3.md">Verwalten von Abhängigkeiten</a></li>
<li><a href="/docs/de/v2.4.x/eks.md">Einsatz in Clouds</a></li>
<li><a href="/docs/de/v2.4.x/scaleout.md">Skalieren eines Milvus-Clusters</a></li>
<li><a href="/docs/de/v2.4.x/monitor_overview.md">Überwachen und Warnen</a></li>
</ul>
</div>
<div class="recomment-item">
  <p>Lernen Sie</p>
<ul>
<li><a href="/docs/de/v2.4.x/system_configuration.md">Systemkonfiguration</a></li>
<li><a href="/docs/de/v2.4.x/architecture_overview.md">Überblick über die Architektur</a></li>
<li><a href="/docs/de/v2.4.x/index.md">Vektor-Index</a></li>
<li><a href="/docs/de/v2.4.x/metric.md">Ähnlichkeitsmetriken</a></li>
<li><a href="/docs/de/v2.4.x/glossary.md">Glossar</a></li>
</ul>
</div>
</div>
<div class="doc-home-what-is-new">
<h2 id="Whats-new-in-docs" class="common-anchor-header">Was ist neu in der Dokumentation<button data-href="#Whats-new-in-docs" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h2><p><em>März 2024 - Veröffentlichung von Milvus 2.4.0</em></p>
<ul>
<li>Anleitung zur <a href="/docs/de/v2.4.x/multi-vector-search.md">Durchführung einer hybriden Suche</a> hinzugefügt.</li>
<li>Beschreibung des <a href="/docs/de/v2.4.x/gpu_index.md">GPU-Index</a> hinzugefügt.</li>
<li>Anleitung hinzugefügt, wie Sie <a href="/docs/de/v2.4.x/embeddings.md">Ihre Daten mit PyMilvus einbetten</a> können.</li>
<li>Beschreibungen von <a href="/docs/de/v2.4.x/milvus-cdc-overview.md">Milvus CDC</a> hinzugefügt.</li>
</ul>
</div>
